--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="order">
                 <p id="item">Returns</p>
-                <p><b>& Order</b></p>
+                <p><b>& Orders</b></p>
             </div>
             <div class="cart border">
                 <i class="fa-solid fa-cart-shopping"></i>
